Correcion del color de navbar:hover

--- a/src/main/less/header.less
+++ b/src/main/less/header.less
@@ -56,7 +56,7 @@
 }
 .navbar li:hover > a {
   color: #eeeeee;
-  background-color: lightgreen;
+  background-color: #ff3f3f ;
 }
 
 .navbar-toggle {
