--- a/src/main/less/petclinic.less
+++ b/src/main/less/petclinic.less
@@ -18,8 +18,11 @@
 @spring-brown:      #34302D;
 @spring-grey:       #838789;
 @spring-light-grey: #f1f1f1;
+@spring-burlywood: #DEB887;
+@spring-brown-d: #A52A2A;
+@spring-maroon: #800000;
 
-@body-bg:                           @spring-light-grey;
+@body-bg:                         	@spring-burlywood;
 @text-color:                        @spring-brown;
 @link-color:                        @spring-dark-green;
 @link-hover-color:                  @spring-dark-green;
@@ -27,10 +30,10 @@
 @navbar-default-link-color:         @spring-light-grey;
 @navbar-default-link-active-color:  @spring-light-grey;
 @navbar-default-link-hover-color:   @spring-light-grey;
-@navbar-default-link-hover-bg:      @spring-green;
+@navbar-default-link-hover-bg:      @spring-brown-d;
 @navbar-default-toggle-icon-bar-bg: @spring-light-grey;
 @navbar-default-toggle-hover-bg:    transparent;
-@navbar-default-link-active-bg:     @spring-green;
+@navbar-default-link-active-bg:     @spring-brown-d;
 
 @border-radius-base:             0;
 @border-radius-large:            0;
@@ -50,7 +53,7 @@
 @table-border-color:                      @spring-brown;
 
 .table > thead > tr > th {
-  background-color: lighten(@spring-brown, 3%);
+  background-color: lighten(@spring-maroon, 1%);
   color: @spring-light-grey;
 }
 
