Minor Fix Task[2.3.3] - B

--- a/src/main/less/petclinic.less
+++ b/src/main/less/petclinic.less
@@ -21,6 +21,7 @@
 @spring-burlywood: #DEB887;
 @spring-brown-d: #A52A2A;
 @spring-maroon: #800000;
+@spring-goldenrod: #DAA520;
 
 @body-bg:                         	@spring-burlywood;
 @text-color:                        @spring-brown;
@@ -39,8 +40,8 @@
 @border-radius-large:            0;
 @border-radius-small:            0;
 
-@btn-default-color:              @spring-light-grey;
-@btn-default-bg:                 @spring-brown;
+@btn-default-color:              @spring-goldenrod;
+@btn-default-bg:                @spring-maroon;
 @btn-default-border:             @spring-green;
 
 @nav-tabs-active-link-hover-color:        @spring-light-grey;
