Final changes for version 1.0.0
Fixed several bugs,typos in views and other minor changes.

--- a/src/main/less/header.less
+++ b/src/main/less/header.less
@@ -32,7 +32,7 @@
 }
 
 .navbar li > a, .navbar-text {
-  font-family: "montserratregular", sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   text-shadow: none;
   font-size: 14px;
 
